# src/routes/tarefaRouter.ts
@@ -5,9 +5,10 @@ import { TarefaController } from "../controllers";
 const routes = Router();
 
 routes.post("/criar/:id", TarefaController.criarTarefa);
-routes.get("/listarTarefas/:id", TarefaController.BuscarTarefas);
-routes.put("/editarTarefa/:id", TarefaController.EditarTarefa);
-routes.delete("/deletar/:id", TarefaController.deletarTarefa);
-routes.get("/listaTarefaEspecifica/:id", TarefaController.BuscarTarefaID);
+routes.get("/buscarTarefas/:id", TarefaController.BuscarTarefas);
+routes.put("/editar/:id", TarefaController.EditarTarefa);
+routes.delete("/deletar/:id", TarefaController.DeletarTarefa);
+routes.get("/buscarTarefa/:id", TarefaController.BuscarTarefaID);
+routes.put("/mudarPrioridade/:id", TarefaController.MudarPrioridadeDaTarefa);
 
 export default routes;
